# django-use-email-as-username

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: tests.yml
django_use_email_as_username/: __init__.py  admin.py  apps.py  models.py
django_use_email_as_username/management/commands/: create_custom_user_app.py
django_use_email_as_username/management/commands/app_template/: admin.py-tpl  apps.py-tpl
docs/: Makefile  conf.py  index.rst
example/: Pipfile  README.rst
example/custom_user/: apps.py
example/custom_user/migrations/: 0001_initial.py
example/example/: settings.py
tests/: settings.py  test.py  urls.py
tests/apps/custom_user_test/: apps.py  models.py
tests/apps/custom_user_test/migrations/: 0001_initial.py
