[tool.poetry]
name = "django-use-email-as-username"
version = "1.2.0"
description = "A Django app to use email as username for user authentication."

license = "BSD-3-Clause"

authors = [
    "Federico Jaramillo Martínez <federicojaramillom@gmail.com>"
]

readme = "README.rst"

repository = "https://github.com/jmfederico/django-use-email-as-username"

keywords = ["django", "email", "auth", "username"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 1.11",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

packages = [
    { include = "django_use_email_as_username" },
]

[tool.poetry.dependencies]
python = ">=3.5"
django = ">=1.11"
# Abuse extras to make testing easier with TOX
codecov = {version = ">=2.0.15", optional = true}
coverage = {version = ">=4.0", optional = true}

[tool.poetry.extras]
testing = ["codecov", "coverage"]

[tool.poetry.dev-dependencies]
sphinx = "*"
sphinx-autobuild = "*"
sphinx-rtd-theme = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
