[project]
authors = [
    {name = "Federico Jaramillo Martínez", email = "federicojaramillom@gmail.com"},
]
requires-python = ">=3.5"
dependencies = [
    "django>=1.11",
]
name = "django-use-email-as-username"
version = "1.3.0"
description = "A Django app to use email as username for user authentication."
readme = "README.rst"
keywords = [
    "django",
    "email",
    "auth",
    "username",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 1.11",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]
license = {text = "BSD-3-Clause"}

[project.urls]
repository = "https://github.com/jmfederico/django-use-email-as-username"

[project.optional-dependencies]
# Abuse extras to make testing easier with TOX
testing = [
    "codecov",
    "coverage",
]


[tool.pdm.dev-dependencies]
dev = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-rtd-theme",
]

[tool.pdm.build]
includes = [
    "django_use_email_as_username",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
